[gd_scene load_steps=24 format=3 uid="uid://bti1srdgt7s3g"]

[ext_resource type="Texture2D" uid="uid://ccpcov8copbsr" path="res://GameOvers/play.png" id="1_bt3yw"]
[ext_resource type="Texture2D" uid="uid://b6mnotfq2nvwr" path="res://THE END.png" id="1_se5xy"]
[ext_resource type="Script" uid="uid://dw8jryj01sd1q" path="res://finish.gd" id="1_xfp72"]
[ext_resource type="Texture2D" uid="uid://b2cwexntmxq3y" path="res://char/Scene2/background.png" id="2_k1tgu"]
[ext_resource type="Texture2D" uid="uid://d4d1p6sjl0m28" path="res://GameOvers/turn off.png" id="2_se5xy"]
[ext_resource type="Script" uid="uid://mgk7n7amk1ex" path="res://upgrades.gd" id="3_5t5x4"]
[ext_resource type="AudioStream" uid="uid://ql4s8cif4b6u" path="res://cash baby dinero.mp3" id="3_aeglf"]
[ext_resource type="AudioStream" uid="uid://guv1owvlngrj" path="res://roblox tycoon error.mp3" id="4_5t5x4"]
[ext_resource type="Texture2D" uid="uid://cyegemnyn6mvc" path="res://char/Scene2/progress bar/upg4.png" id="6_gin24"]
[ext_resource type="Texture2D" uid="uid://dwn1svpfhvduo" path="res://char/Scene2/upgrade icons/energy.png" id="7_aropp"]
[ext_resource type="Texture2D" uid="uid://cntrgr2ilmoyj" path="res://char/Scene2/upgrades done.png" id="8_m34rv"]
[ext_resource type="Texture2D" uid="uid://clgoik8jg1tty" path="res://char/Scene2/upgrade icons/money gain.png" id="10_3u7vj"]
[ext_resource type="Texture2D" uid="uid://dvoyhdhd4t00m" path="res://char/Scene2/upgrade icons/temper.png" id="11_2u6bi"]
[ext_resource type="Texture2D" uid="uid://c26a8fxo3jtks" path="res://retirement.png" id="12_g88d4"]
[ext_resource type="AudioStream" uid="uid://xaslxl48rlh5" path="res://735062__gammagool__fast-warp-in.wav" id="14_5t5x4"]
[ext_resource type="AudioStream" uid="uid://cl73sduu1w4wa" path="res://Imported/325544__tsitsa__seashore_waves.wav" id="18_10s8j"]

[sub_resource type="Animation" id="Animation_e071v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_xk1oi"]
resource_name = "final"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_aeglf"]
resource_name = "the fin"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v1b03"]
_data = {
&"RESET": SubResource("Animation_e071v"),
&"final": SubResource("Animation_xk1oi"),
&"the fin": SubResource("Animation_aeglf")
}

[sub_resource type="Animation" id="Animation_10s8j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_5t5x4"]
resource_name = "new_beggining"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.0666667, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gin24"]
_data = {
&"RESET": SubResource("Animation_10s8j"),
&"new_beggining": SubResource("Animation_5t5x4")
}

[node name="Node" type="Node"]
script = ExtResource("1_xfp72")

[node name="Scene2" type="Node" parent="."]

[node name="TextureScene2" type="TextureRect" parent="Scene2"]
texture_filter = 2
texture_repeat = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.5
offset_bottom = -0.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_k1tgu")
stretch_mode = 1

[node name="Upgrades" type="Node" parent="Scene2"]
script = ExtResource("3_5t5x4")

[node name="Successful" type="AudioStreamPlayer2D" parent="Scene2/Upgrades"]
visible = false
position = Vector2(-7.62939e-06, 0)
stream = ExtResource("3_aeglf")

[node name="Error" type="AudioStreamPlayer2D" parent="Scene2/Upgrades"]
visible = false
position = Vector2(-7.62939e-06, 0)
stream = ExtResource("4_5t5x4")

[node name="Upgrade1-Energy" type="CanvasLayer" parent="Scene2/Upgrades"]

[node name="ProgressBars-Upgrade1" type="CanvasLayer" parent="Scene2/Upgrades/Upgrade1-Energy"]

[node name="upg4" type="Sprite2D" parent="Scene2/Upgrades/Upgrade1-Energy/ProgressBars-Upgrade1"]
position = Vector2(541.5, 325)
texture = ExtResource("6_gin24")

[node name="Energy" type="Sprite2D" parent="Scene2/Upgrades/Upgrade1-Energy"]
position = Vector2(548, 153.75)
scale = Vector2(4.32353, 4.76667)
texture = ExtResource("7_aropp")

[node name="UpgradesDone" type="Sprite2D" parent="Scene2/Upgrades/Upgrade1-Energy"]
position = Vector2(544, 251)
scale = Vector2(1.70667, 1.63636)
texture = ExtResource("8_m34rv")

[node name="Upgrade3-MoneyGain" type="CanvasLayer" parent="Scene2/Upgrades"]

[node name="ProgressBars-Upgrade3" type="CanvasLayer" parent="Scene2/Upgrades/Upgrade3-MoneyGain"]

[node name="upg4" type="Sprite2D" parent="Scene2/Upgrades/Upgrade3-MoneyGain/ProgressBars-Upgrade3"]
position = Vector2(342.5, 543)
texture = ExtResource("6_gin24")

[node name="MoneyGain" type="Sprite2D" parent="Scene2/Upgrades/Upgrade3-MoneyGain"]
position = Vector2(340, 359.75)
scale = Vector2(4.3, 3.95)
texture = ExtResource("10_3u7vj")

[node name="UpgradesDone" type="Sprite2D" parent="Scene2/Upgrades/Upgrade3-MoneyGain"]
position = Vector2(345, 454)
scale = Vector2(1.70667, 1.63636)
texture = ExtResource("8_m34rv")

[node name="Upgrade4-CustomerTemper" type="CanvasLayer" parent="Scene2/Upgrades"]

[node name="ProgressBars-Upgrade4" type="CanvasLayer" parent="Scene2/Upgrades/Upgrade4-CustomerTemper"]

[node name="upg4" type="Sprite2D" parent="Scene2/Upgrades/Upgrade4-CustomerTemper/ProgressBars-Upgrade4"]
position = Vector2(728.5, 549)
texture = ExtResource("6_gin24")

[node name="Temper" type="Sprite2D" parent="Scene2/Upgrades/Upgrade4-CustomerTemper"]
position = Vector2(730, 370.75)
scale = Vector2(3.525, 3.525)
texture = ExtResource("11_2u6bi")

[node name="UpgradesDone" type="Sprite2D" parent="Scene2/Upgrades/Upgrade4-CustomerTemper"]
position = Vector2(733, 467)
scale = Vector2(1.70667, 1.63636)
texture = ExtResource("8_m34rv")

[node name="The End" type="CanvasLayer" parent="Scene2/Upgrades"]

[node name="Retirement Requirements" type="Label" parent="Scene2/Upgrades/The End"]
offset_right = 40.0
offset_bottom = 23.0

[node name="Retirement Check Timer" type="Timer" parent="Scene2/Upgrades/The End"]
wait_time = 0.1

[node name="Finish" type="TextureButton" parent="Scene2/Upgrades/The End"]
offset_left = 269.0
offset_top = 218.0
offset_right = 830.0
offset_bottom = 470.0
texture_normal = ExtResource("12_g88d4")
ignore_texture_size = true
stretch_mode = 0

[node name="too much" type="Label" parent="Scene2/Upgrades/The End/Finish"]
layout_mode = 0
offset_left = 229.0
offset_top = 93.0
offset_right = 385.0
offset_bottom = 213.0
theme_override_colors/font_color = Color(0, 0.811765, 1, 1)
theme_override_font_sizes/font_size = 40
text = "500"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Scene2/Upgrades/The End/Finish"]
libraries = {
&"": SubResource("AnimationLibrary_v1b03")
}

[node name="Timer" type="Timer" parent="Scene2/Upgrades/The End/Finish/AnimationPlayer"]

[node name="ColorRect" type="ColorRect" parent="Scene2/Upgrades/The End/Finish"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -269.0
offset_top = -218.0
offset_right = 883.0
offset_bottom = 430.0
color = Color(0, 0, 0, 1)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Scene2/Upgrades/The End/Finish"]
stream = ExtResource("14_5t5x4")

[node name="Timer" type="Timer" parent="Scene2/Upgrades"]
wait_time = 0.1
one_shot = true
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
libraries = {
&"": SubResource("AnimationLibrary_gin24")
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/AnimationPlayer"]
modulate = Color(0, 0, 0, 0)
offset_right = 1155.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_right = 1153.0
offset_bottom = 776.0
texture = ExtResource("1_se5xy")

[node name="MainMenu" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.0223472
anchor_top = 0.687111
anchor_right = 0.160063
anchor_bottom = 0.884061
offset_left = 764.256
offset_top = 3.75226
offset_right = 763.608
offset_bottom = 5.12823
theme_override_font_sizes/font_size = 30
icon = ExtResource("1_bt3yw")
icon_alignment = 1
expand_icon = true

[node name="Quit" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.629
anchor_top = 0.793592
anchor_right = 0.753695
anchor_bottom = 0.998259
offset_left = 241.392
offset_top = -68.2477
offset_right = 240.744
offset_bottom = -66.8717
theme_override_font_sizes/font_size = 30
icon = ExtResource("2_se5xy")
icon_alignment = 1
expand_icon = true

[node name="735062GammagoolFast-warp-in" type="AudioStreamPlayer" parent="CanvasLayer"]
stream = ExtResource("14_5t5x4")

[node name="325544TsitsaSeashoreWaves" type="AudioStreamPlayer" parent="CanvasLayer"]
stream = ExtResource("18_10s8j")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.5

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_5t5x4")
playback_type = 2

[connection signal="timeout" from="Scene2/Upgrades/The End/Finish/AnimationPlayer/Timer" to="Scene2/Upgrades" method="_on_timer_UFO_timeout"]
[connection signal="timeout" from="Scene2/Upgrades/Timer" to="Scene2/Upgrades" method="_on_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/MainMenu" to="." method="_on_mainmenu_pressed"]
[connection signal="pressed" from="CanvasLayer/Quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
